# scj3

./: CMakeLists.txt  LICENSE  README.md  ThreadPool.h  _simdjson.cpp  _simdjson.h  claujson.cpp  claujson.h  claujson_array.cpp  claujson_array.h  claujson_internal.h  claujson_object.cpp  claujson_object.h  claujson_partialjson.cpp  claujson_partialjson.h  claujson_string.h  claujson_value.cpp  main.cpp  result.txt  simdjson.cpp  simdjson.h  test.cpp  thread_pool.h
.circleci/: config.yml
.github/workflows/: cmake.yml
linux/: claujson.cpp  claujson.h  main.cpp  makefile  mimalloc-new-delete.h  readme.md  scj  test.txt
test/: main.cpp
